--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ version_commons_io=2.6
 version_commons_beanutils=1.9.3
 
 version_spring=5.1.9.RELEASE
+version_spring_data=2.1.4.RELEASE
 
 version_junit=4.12
 version_mockito=2.23.4
