--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,16 @@
-buildscript {
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'eclipse'
+    //apply plugin: 'project-report'
+
+    sourceCompatibility = 1.8
+
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
+
     repositories {
         mavenCentral()
     }
 }
-
-apply plugin: 'java'
-
-
-dependencies {
-    compile "org.apache.commons:commons-lang3:$version_commons_lang3"
-}
-
